# python-starter-vscode

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  README.md  app.py  app_test.py  cli_args.py  config.py  container.py  log.ini  main.py  pyproject.toml  requirements.in  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
bruno/: tests.bru  tests.csv  tests.sh
bruno/api/: users.bru
bruno/api/exceptions/: custom.bru  http.bru  unhandled.bru
calculator/: executor.py  executor_test.py  fibonacci.py  fibonacci_test.py
src/api/: __init__.py  app.py  endpoints.py  log_config.py  log_config.yaml
src/business/: __init__.py  helpers.py
src/cli/: __init__.py  __main__.py  main.py  suffix.py  tools.py  users_command.py  version.py
src/core/: __init__.py  config.py
src/core/data/: __init__.py  models.py  persistence.py
src/core/users/: __init__.py  services.py
src/forms/: main.py
tests/app/: config.py  test_endpoints.py
tests/business/: test_helpers.py
tests/core/data/: test_persistence.py
tests/core/users/: test_services.py
