[project]
name = "python-starter-kit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.13",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.0",
    "streamlit>=1.46.0",
]

[dependency-groups]
dev = [
    "fastapi-cli>=0.0.7",
    "ruff>=0.12.0",
]

[project.scripts]
starter_cli = "cli:run"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"